0.38 
 - updated russian translation
 - works on older distros (gtk2.0 and gcc-2.95+ fixes) for real this time :)
 - better man-page
 - if a pkg is not installable, the user gets a warning if the tries to 
   install it

0.37
 - optimisation of the package view, should be faster now 
   (especially the flat list) 
 - the "update" button for the rgfiltermanager dialog is gone,
   all changes to the filters are tracked automaticly
 - the repository dialog is glade based now
 - some basic support for sources.list.d (thanks Panu)
 - load/save changes is implemeted (you can save your changes and 
   later reload them) 
 - should build with gtk2.0 again (for all people that use RH8.x or 
   UnitedLinux 1.0)
 - a new "not installable" filter was added
 - search for multiple words improved

0.36
 - new filter dialog
 - each filter can have a different view now
 - more easy way to intall suggested/recommended packages
 - dialog to auto install recommended/suggested packages

0.35
 - Synaptic uses a tree view now. Users may select from
   "Section tree", "Alphabetic tree", "Status tree", or
   "Raw list" views.
 - "What will change" dialog, informing how the current selection
   will change, if the user try to do some action in a package
   that would require further changes in the current selection.
 - Now it's possible to include APT-enabled CDROMs in the database
   using synaptic (apt-cdrom like).
 - Undo/Redo implemented, allowing one to rollback changes in the
   selection.
 - Filter and button for debconf packages (debian only).
 - Improved progress dialog for rpm installation.
 - If --with-zvt was used, terminal vizualization during package
   manager action is now runtime configurable.
 - Many minor improvements in the user interface, including great
   new icons.
 - applied a patch from Mike Snitzer to make it possible to search for 
   versions.
 - Bugfixes.

0.32
 - bugfixes 
 - translation updates 
 - toolbar buttons can be configured now

0.31