@@ -4,6 +4,9 @@
  - better man-page
  - if a pkg is not installable, the user gets a warning if the tries to 
    install it
+ - much improved "by Status" tree-view, displays now by:
+   "installed, installed and upgradeable, new in archive, not installed,
+    not installed but residual config"
 
 0.37
  - optimisation of the package view, should be faster now 
